--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,8 @@ html {
 }
 
 .foto-perfil  {
+    display: flex;
+    transform: 110 200px;
     width: 180px;
     height: 180px;
     object-fit: cover;
@@ -36,31 +38,22 @@ html {
     text-align: left;
     color: rgb(233, 233, 240);
     text-shadow: 1px 2px 3px #110101;
-    background-color: #bbbbbb4f;
-    padding: 10px 4 10;
-    border-radius: 15px;
-    justify-content: flex-start;
-    background-size: cover;
-    background-repeat: no-repeat;
+  
 }
 
 .menu {
-   justify-content: center;
-   background: linear-gradient(to right, #f86605, #f86605);
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     padding: 10px 20px;
     z-index: 1000;
     display: flex;
-    justify-content: flex-end;
-    background-color:#f86605;
-    justify-content: flex-end;
     border-radius: 10px 0 0 10px;
     background-size: cover;
     background-repeat: no-repeat;
-    align-items: center;
     z-index: 1000;
+   
+
 }
 .menu ul {
     display: flex; 
@@ -76,7 +69,7 @@ html {
   padding: 8px 14px;
   border-radius: 8px;
   transition: 0.3s;
-    text-shadow: 0 0 10px rgb(81, 10, 248), 00 2px rgb(104, 72, 105);
+  text-shadow: 0 0 10px rgb(0, 0, 0), 00 2px rgb(243, 15, 7);
 }
 
 .menu li {
@@ -93,17 +86,32 @@ html {
 .menu :hover {
     color: #fdfaf8 ;
 }
+.sobre-mim h3 {
+  border: 2px solid #fff;
+  display: flex;
+  border-radius: 8px;
+  width: 118px;
+  background-color: #f86605;
+  
+}
+.sobre-mim p {
+  text-align: justify;
+  justify-content: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
 .apresentacao {
     text-align: center;
     margin-top: 80px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+  
     
 }
 .apresentacao p{
     display: inline;
     text-align: center;
     background-color: #110101 1px 2px 3px;
+
 
 }
 
@@ -205,9 +213,6 @@ justify-content: center;
   justify-content: space-around;
 }
 
-.ampliada:target { 
-  display: flex;
-}
 .projeto-item:hover {
   transform: scale(1.05);
 }
@@ -372,4 +377,22 @@ input[type=radio]{
     margin-top: 50px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
+}
+
+.header {
+  position: fixed;
+  width: 100%;
+  height: 7rem;
+  top: 0;
+  left: 0;
+  background-color: #464444;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  box-sizing: border-box;
+
 }
